@startuml Activity_Layer
' ==================== Color Definitions ====================
!define INTERFACE_COLOR #E8F5E9
!define ABSTRACT_COLOR #FFF3E0
!define ENTITY_COLOR #E3F2FD
!define SERVICE_COLOR #F3E5F5
!define FACTORY_COLOR #FFF9C4
!define BUILDER_COLOR #FFFDE7
!define ENUM_COLOR #E0F7FA

skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor<<interface>> INTERFACE_COLOR
    BackgroundColor<<abstract>> ABSTRACT_COLOR
    BackgroundColor<<entity>> ENTITY_COLOR
    BackgroundColor<<service>> SERVICE_COLOR
    BackgroundColor<<factory>> FACTORY_COLOR
    BackgroundColor<<builder>> BUILDER_COLOR
    BackgroundColor<<enum>> ENUM_COLOR
}

package "Activity Management Component" {

    ' ==================== High-Level Interfaces ====================
    interface IActivityManagement <<interface>> {
        +createActivity(data: ActivityDTO, type: ActivityType): ActivityDTO
        +updateActivity(id: String, data: ActivityDTO): ActivityDTO
        +deleteActivity(id: String): Response
        +getAllActivities(): List<ActivityDTO>
    }

    interface INotificationSystem <<interface>> {
        +sendNotification(userId: String, message: String, type: NotificationType): Response
        +notifyEventUpdate(eventId: String, message: String): Response
    }

    ' ==================== Prototype Pattern ====================
    interface IPrototype<T> <<interface>> {
        +clone(): T
    }

    ' ==================== Service Layer ====================
    class ActivityManagementService <<service>> {
        -IActivityFactory activityFactory
        -INotificationSystem notificationSystem
        +createActivity(data: ActivityDTO, type: ActivityType): ActivityDTO
        +updateActivity(id: String, data: ActivityDTO): ActivityDTO
        +deleteActivity(id: String): Response
        +getAllActivities(): List<ActivityDTO>
    }

    enum ActivityType <<enum>> {
        EVENT
        TRIP
    }

    ' Abstract Factory from Repository Layer
    abstract class RepositoryFactory <<factory>> {
        +createRepository(): IBaseRepository
        #configureRepository(): void
    }

    ' ==================== Abstract Factory ====================
    interface IActivityFactory <<interface>> {
        +createActivity(data: ActivityDTO): Activity
        +clonePrototype(activity: Activity): Activity
    }

    class EventFactory <<factory>> {
        -IActivityBuilder builder
        +EventFactory(builder: IActivityBuilder)
        +createActivity(data: ActivityDTO): Event
        +clonePrototype(activity: Activity): Event
    }

    class TripFactory <<factory>> {
        -IActivityBuilder builder
        +TripFactory(builder: IActivityBuilder)
        +createActivity(data: ActivityDTO): Trip
        +clonePrototype(activity: Activity): Trip
    }

    IActivityFactory <|.. EventFactory
    IActivityFactory <|.. TripFactory

    ' ==================== Builder Pattern ====================
    interface IActivityBuilder <<builder>> {
        +reset()
        +setBasicInfo(data: ActivityDTO)
        +setDetails()
        +getResult(): ActivityDTO
    }

    class EventBuilder <<builder>> {
        -RepositoryFactory repositoryFactory
        +reset()
        +setBasicInfo(data: ActivityDTO)
        +setDetails()
        +getResult(): ActivityDTO
    }

    class TripBuilder <<builder>> {
        -RepositoryFactory repositoryFactory
        +reset()
        +setBasicInfo(data: ActivityDTO)
        +setDetails()
        +getResult(): ActivityDTO
    }

    IActivityBuilder <|.. EventBuilder
    IActivityBuilder <|.. TripBuilder

    package "Activity Memento Pattern" {
        class ActivityHistoryCaretaker {
            -RepositoryFactory repositoryFactory
            +save(activity: Activity): void
            +getLastMemento(activityId: String): ActivityMemento
        }

        note right of ActivityHistoryCaretaker
            "Obtains mementos from Data Layer (activityFactory)"
            "and persists snapshots via RepositoryFactory"
        end note

        ActivityHistoryCaretaker o-- RepositoryFactory : "uses repo factory"
    }

    package "Activity State Pattern" {
        interface ActivityState <<interface>> {
            +publish(activity: Activity): Activity
            +complete(activity: Activity): Activity
            +cancel(activity: Activity): Activity
        }

        class ActivityLifecycle {
            -ActivityState state
            +setState(state: ActivityState): void
            +publish(activity: Activity): Activity
            +complete(activity: Activity): Activity
            +cancel(activity: Activity): Activity
        }

        class UpcomingState {
            +publish(activity: Activity): Activity
            +complete(activity: Activity): Activity
            +cancel(activity: Activity): Activity
        }

        class CompletedState {
            +publish(activity: Activity): Activity
            +complete(activity: Activity): Activity
            +cancel(activity: Activity): Activity
        }

        class CancelledState {
            +publish(activity: Activity): Activity
            +complete(activity: Activity): Activity
            +cancel(activity: Activity): Activity
        }

        ActivityState <|.. UpcomingState
        ActivityState <|.. CompletedState
        ActivityState <|.. CancelledState
        ActivityLifecycle o-- ActivityState : "has current"

        note right of ActivityLifecycle
            "Encapsulates valid transitions and delegates"
            "lifecycle operations to current ActivityState"
        end note
    }

    ' ==================== Relationships ====================
    EventFactory o-- IActivityBuilder : "uses builder"
    TripFactory o-- IActivityBuilder : "uses builder"

    ActivityManagementService o-- IActivityFactory : "uses factory"
    ActivityManagementService o-- INotificationSystem : "uses service"
    ActivityManagementService o-- ActivityHistoryCaretaker : "uses caretaker"
    ActivityManagementService o-- ActivityLifecycle : "uses state context"
    note on link
        "Service calls save(activity) before update to snapshot state"
    end note
    IActivityManagement <|.. ActivityManagementService : implements

    ' Repository Factory Relations
    EventBuilder o-- RepositoryFactory : aggregation
    TripBuilder o-- RepositoryFactory : aggregation
}


@enduml
